--- a/KooliProjekt/Views/Matches/Index.cshtml
+++ b/KooliProjekt/Views/Matches/Index.cshtml
@@ -67,8 +67,8 @@ else
             {
                         <tr>
                             <td>@match.Id</td>
-                            <td>@match.HomeMatches</td>
-                            <td>@match.AwayMatches</td>
+                            <td>@match.HomeTeamName</td>
+                            <td>@match.AwayTeamName</td>
                         </tr>
             }
             </tbody>
